# TanksGame

./: CMakeLists.txt  main.cpp
headers/entities/: Block.h  ICollisive.h  IRenderable.h  Map.h  Projectile.h
headers/entities/tanks/: EnemyTank.h  ITank.h  PlayerTank.h
headers/factories/: BlockFactory.h  MapFactory.h  ProjectileFactory.h
headers/factories/tanks/: EnemyTankFactory.h  PlayerTankFactory.h  TankFactory.h
headers/managers/: AssetManager.h  CollisionManager.h  GameManager.h  Renderer.h  TanksGame.h
models/entities/: Block.cpp  Map.cpp  Projectile.cpp
models/entities/tanks/: EnemyTank.cpp  ITank.cpp  PlayerTank.cpp
models/factories/tanks/: EnemyTankFactory.cpp  PlayerTankFactory.cpp
models/managers/: CollisionManager.cpp  GameManager.cpp  Renderer.cpp  TanksGame.cpp
structs/: EntityCollisionInfo.h  EntityRenderInfo.h
